# simanneal-sidb

./: .gitignore  .gitmodules  .release_time  CMakeLists.txt  Dockerfile  Makefile  MakefileOriginal  README.md  docker-run.sh  engine_description.xml  global.cc  global.h  interface.cc  interface.h  logger.h  main.cc  main.cu  maj_short_inputs.qad  make_script  option_dialog.ui  phys_connector.cc  phys_connector.h  qcaMajGate.qad  setup.py  sim_anneal.cc  sim_anneal.cu  sim_anneal.h  sim_anneal.physeng  sim_problem.xml  sim_problem.xml~  simanneal.physeng  siqadconn.cc  siqadconn.h  test_script.py
.github/workflows/: cmake.yml  python-package-conda.yml
sample_problems/: ha_11_cuda.xml  or_00_cuda.xml  or_00_problem.xml  or_00_problem_with_fc.xml
src/: constants.h  gemm.cu  global.h  interface.cc  interface.h  logger.h  main.cc  math.cu  phys_model.cu  sim_anneal.cu  simanneal.cc  simanneal.h  simanneal_alg.cu  simanneal_cuda.cu  simanneal_cuda.h  siqadconn.cc  siqadconn.h
swig/: py_demo_script.py  simanneal.i
tests/: catch2_wrapper.hpp  simanneal.test.cc  test_py_wrapper.py  tests_main.cc
